--- a/index.html
+++ b/index.html
@@ -1,26 +1,44 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="/src/styles.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aura</title>
-    <script type="module" src="/src/main.ts" defer></script>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>Syntax Highlighter</title>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.8/ace.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
     <style>
+        html,
+        body {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            font-family: 'Montserrat', sans-serif;
+        }
+
+        #editor {
+            width: 100vw;
+            height: 100vh; 
+        }
     </style>
-  </head>
-  <body>
-    <header>
-      <img class="logo" src="./src/assets/aura.png" alt="Aura Logo">
-      <nav>
-          <a href="#">Home</a>
-          <a href="#">Files</a>
-          <a href="#">Edit</a>
-      </nav>
-    </header>
-  <footer>  
-    AURA
-  </footer>
-    </div>
-  </body>
+</head>
+
+<body class="bg-gray-900 text-white">
+    <div id="editor"></div>
+
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.8/ext-language_tools.js"></script>
+    <script type="text/javascript">
+        var editor = ace.edit("editor");
+        editor.setTheme("ace/theme/twilight");
+
+        editor.getSession().setMode("ace/mode/javascript");
+        editor.getSession().setUseWorker(false);
+        editor.setOptions({
+            enableBasicAutocompletion: true,
+            enableSnippets: true,
+            enableLiveAutocompletion: true
+        });
+    </script>
+</body>
+
 </html>
