--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 
 <head>
-    <title>Syntax Highlighter</title>
+    <title>Aura IDE </title>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.8/ace.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19"></script>
+    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
     <style>
         html,
@@ -18,27 +19,43 @@
 
         #editor {
             width: 100vw;
-            height: 100vh; 
+            height: calc(100vh - 40px); 
+        }
+        .navbar {
+            width: 100%;
+            height: 40px;
+            background-color: #333;
+            display: flex;
+            justify-content: flex-end; /* Zarovnání tlačítek na pravou stranu */
+            align-items: center;
+            padding: 0 10px;
+        }
+
+        .navbar button {
+            margin-left: 10px; /* Mezera mezi tlačítky */
+            padding: 5px 10px;
+            background-color: #555;
+            border: none;
+            float: right;
+            color: white;
+            cursor: pointer;
+        }
+
+        .navbar button:hover {
+            background-color: #777;
         }
     </style>
 </head>
 
 <body class="bg-gray-900 text-white">
+    <div class="navbar">
+        <button onclick="openFile()">Open File</button>
+        <!-- Přidejte další tlačítka podle potřeby -->
+    </div>
     <div id="editor"></div>
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.8/ext-language_tools.js"></script>
-    <script type="text/javascript">
-        var editor = ace.edit("editor");
-        editor.setTheme("ace/theme/twilight");
-
-        editor.getSession().setMode("ace/mode/javascript");
-        editor.getSession().setUseWorker(false);
-        editor.setOptions({
-            enableBasicAutocompletion: true,
-            enableSnippets: true,
-            enableLiveAutocompletion: true
-        });
-    </script>
+    <script src="./functions/editor.js"></script>
+    <script src="./functions/openFile.js"></script>
 </body>
-
 </html>
