--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,9 @@
     <title>Aura IDE</title>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.8/ace.js"></script>
     <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./output.css">
     <link rel="stylesheet" href="./assets/style.css">
 </head>
-
 <body class="bg-gray-900 text-white font-montserrat">
 <div class="navbar flex justify-end items-center h-12 px-4">
     <img src="./assets/logo.png" alt="Logo">
@@ -18,7 +16,7 @@
     </div>
 </div>
     <div id="editor" class="w-full h-screen"></div>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.8/ext-language_tools.js"></script>
+    <script type="text/javascript" src="./functions/ajax/ace/1.2.8/ext-language_tools.js"></script>
     <script src="./functions/editor.js"></script>
     <script src="./functions/openFile.js"></script>
 </body>
