--- a/src/index.html
+++ b/src/index.html
@@ -9,15 +9,15 @@
     <style>
     .dragOn {-webkit-app-region: drag;}
     .dragOff {-webkit-app-region: none;}
+
     </style>
 </head>
 <body class="bg-gray-900 text-white font-montserrat">
 <div class="navbar flex items-center h-12 px-4 dragOn">
     <img src="./assets/logo.png" alt="Logo" class="mr-4">
-    <div class="buttons">
+    <div class="buttons dragOff">
       <input type="file" id="file-input" class="hidden" onchange="openFile(event)">
         <label for="file-input">Open File</label>
-        
             <button onclick="minimizeWindow()"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M15 12H9m12 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
             </svg>
@@ -38,22 +38,18 @@
     <script src="./functions/editor.js"></script>
     <script src="./functions/openFile.js"></script>
     <script>
-     function minimizeWindow() {
+        function openFile(event) {
+            window.electronAPI.sendToMain('open-file-dialog');
+        }
+        function minimizeWindow() {
             window.electronAPI.sendToMain('control-window', 'minimize');
         }
-
         function maximizeWindow() {
             window.electronAPI.sendToMain('control-window', 'maximize');
         }
-
         function closeWindow() {
             window.electronAPI.sendToMain('control-window', 'close');
         }
-
-        document.addEventListener('file-opened', function(event) {
-            const fileName = event.detail;
-            console.log('Název otevřeného souboru:', fileName);
-        });
     </script>
 </body>
 </html>
