--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Aura IDE</title>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.8/ace.js"></script>
+    <script type="text/javascript" src="./functions/ajax/ace/1.32.8/ace.js"></script>
     <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="./output.css">
     <link rel="stylesheet" href="./assets/style.css">
@@ -29,7 +29,7 @@
         </div>
 </div>
 <div id="editor" class="w-full h-screen"></div>
-    <script type="text/javascript" src="./functions/ajax/ace/1.2.8/ext-language_tools.js"></script>
+    <script type="text/javascript" src="./functions/ajax/ace/1.32.8/ext-language_tools.js"></script>
     <script src="./functions/editor.js"></script>
     <script src="./functions/openFile.js"></script>
     <script>
