--- a/src/index.html
+++ b/src/index.html
@@ -6,27 +6,27 @@
     <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="./output.css">
     <link rel="stylesheet" href="./assets/style.css">
-    <style>
-        .dragOn {-webkit-app-region: drag;}
-        .dragOff {-webkit-app-region: none;}
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body class="bg-gray-900 text-white font-montserrat">
 <div class="navbar flex items-center h-12 px-4 dragOn">
-    <img src="./assets/logo.png" alt="Logo" class="mr-4">
-    <div class="buttons dragOff">
-      <input type="file" id="file-input" class="hidden" onchange="openFile(event)">
-        <label for="file-input">File</label>
-            <button onclick="minimizeWindow()"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M5 12h14" /></svg>              
-            </button>
-            <button onclick="maximizeWindow()"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 8.25V6a2.25 2.25 0 0 0-2.25-2.25H6A2.25 2.25 0 0 0 3.75 6v8.25A2.25 2.25 0 0 0 6 16.5h2.25m8.25-8.25H18a2.25 2.25 0 0 1 2.25 2.25V18A2.25 2.25 0 0 1 18 20.25h-7.5A2.25 2.25 0 0 1 8.25 18v-1.5m8.25-8.25h-6a2.25 2.25 0 0 0-2.25 2.25v6" /></svg>                        
-            </button>
-            <button onclick="closeWindow()"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" /></svg>                       
-            </button>
-        </div>
+<img src="./assets/logo.png" alt="Logo" class="mr-4">
+<div class="buttons dragOff">
+    <input type="file" id="file-input" class="hidden" onchange="openFile(event)">
+    <label for="file-input">File</label>
+        <button onclick="minimizeWindow()"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M5 12h14" /></svg>              
+        </button>
+        <button onclick="maximizeWindow()"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 8.25V6a2.25 2.25 0 0 0-2.25-2.25H6A2.25 2.25 0 0 0 3.75 6v8.25A2.25 2.25 0 0 0 6 16.5h2.25m8.25-8.25H18a2.25 2.25 0 0 1 2.25 2.25V18A2.25 2.25 0 0 1 18 20.25h-7.5A2.25 2.25 0 0 1 8.25 18v-1.5m8.25-8.25h-6a2.25 2.25 0 0 0-2.25 2.25v6" /></svg>                        
+        </button>
+        <button onclick="closeWindow()"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" /></svg>                       
+        </button>
+    </div>
+</div>
+<div class="sidemenu">
+
 </div>
 <div id="editor" class="w-full h-screen"></div>
     <script type="text/javascript" src="./functions/ajax/ace/1.32.8/ext-language_tools.js"></script>
