--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,8 @@
 <div class="navbar flex items-center h-12 px-4 dragOn">
     <img src="./assets/logo.png" alt="Logo" class="mr-4">
     <div class="buttons dragOff">
-      <input type="file" id="file-input" class="hidden" onchange="openFile(event)">
-        <label for="file-input">File</label>
+        <input type="file" id="file-input" class="hidden" onchange="openFile(event)">
+        <label for="file-input">Open File</label>
             <button onclick="minimizeWindow()"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M5 12h14" /></svg>              
             </button>
@@ -33,9 +33,6 @@
     <script src="./functions/editor.js"></script>
     <script src="./functions/openFile.js"></script>
     <script>
-        function openFile(event) {
-            window.electronAPI.sendToMain('open-file-dialog');
-        }
         function minimizeWindow() {
             window.electronAPI.sendToMain('control-window', 'minimize');
         }
