--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 <img src="./assets/logo.png" alt="Logo" class="mr-4">
 <div class="buttons dragOff">
     <input type="file" id="file-input" class="hidden" onchange="openFile(event)">
-    <label for="file-input">File</label>
+    <label for="file-input">Open</label>
         <button onclick="minimizeWindow()"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
             <path stroke-linecap="round" stroke-linejoin="round" d="M5 12h14" /></svg>              
         </button>
